# ace-music

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  pyproject.toml  sample-music-material.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: default.yaml
configs/presets/: chinese_traditional.yaml  cinematic.yaml  default.yaml  electronic.yaml
docker/: Dockerfile  compose.yml  pytest.ini
docs/: MUSIC_ENGINE_VALIDATION.md  audio-engine-architecture.md  prd.md  项目严格验收文档.md
docs/superpowers/plans/: 2026-04-12-music-engine-fixes.md  2026-04-14-ace-music-v2.md  2026-04-14-v2-quality-optimizations.md  2026-04-16-stable-generation-material-linkage.md  2026-04-25-audio-engine-contracts.md
examples/: basic_generation.py
scripts/: check_windows_gpu.py  config.sh  mount_windows_smb.sh  run_ace_step.sh  run_remote_ace_step.py
src/ace_music/: __init__.py  agent.py  cli.py  errors.py  regression_runner.py  resume.py  workspace.py
src/ace_music/bridge/: __init__.py  director_bridge.py
src/ace_music/mcp/: __init__.py  config.py  loader.py
src/ace_music/providers/: __init__.py  base.py  deepseek.py  minimax.py  router.py
src/ace_music/schemas/: __init__.py  audio.py  audio_contract.py  lyrics.py  material.py  output_config.py  pipeline.py  preset.py  repair.py  style.py
src/ace_music/tools/: __init__.py  audio_validator.py  base.py  emotion_mapper.py  generator.py  lyrics_planner.py  material_loader.py  minimax_generator.py  output.py  post_processor.py  preset_resolver.py  stable_audio_generator.py  style_planner.py
tests/: conftest.py  test_audio_contract.py  test_audio_validator.py  test_check_gpu.py  test_cli.py  test_generator.py  test_lyrics_planner.py  test_material.py  test_material_pipeline.py  test_minimax_generator.py  test_output.py  test_output_config.py  test_pipeline.py  test_post_processor.py  test_preset_resolver.py  test_preset_schemas.py  test_providers.py  test_regression_runner.py  test_resume.py  test_stable_audio_generator.py  test_style_planner.py  test_workspace.py
