[project]
name = "ace-music"
version = "0.2.0"
description = "AI music generation agent powered by ACE-Step 1.5"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
keywords = ["music-generation", "audio", "ai", "python", "ace-step"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/Shockang/ace-music"
Repository = "https://github.com/Shockang/ace-music"
Issues = "https://github.com/Shockang/ace-music/issues"

[project.scripts]
ace-music = "ace_music.cli:main"

[project.optional-dependencies]
model = [
    "torch>=2.1",
    "torchaudio>=2.1",
    "transformers>=4.40",
    "soundfile>=0.12",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ace_music"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring GPU/model",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
